First version of "data elements to sign" endpoint.
